# toy-engine

./: Cargo.toml  README.md
core/: Cargo.toml  README.md
core/src/: lib.rs
core/src/math/: mod.rs  transform_2d.rs  transform_3d.rs
core/src/primitives/: color.rs  mat.rs  mod.rs  quat.rs  vec.rs
core/src/primitives/color/: conversions.rs  traits.rs
core/src/primitives/color/spaces/: hsl.rs  hsv.rs  linear.rs  mod.rs  premult.rs  rgb.rs
core/src/primitives/mat/: mat2.rs  mat3.rs  mat4.rs
core/src/primitives/vec/: vec2.rs  vec3.rs  vec4.rs
graphics/: Cargo.toml
graphics/examples/: null_renderer_example.rs
graphics/src/: camera.rs  context.rs  frame.rs  lib.rs  render.rs
graphics/src/backend/: mod.rs  null_render.rs
graphics/src/frame/: frame_data.rs  frame_handle.rs
graphics/src/render/: render_packet.rs
